tutorial/projects/Akshy/reports/perform_search/2024.04.28.13.21.19.757/perform_search/execution_debug.log
2024-04-28 13:21:22,852 root INFO Test execution started: perform_search
2024-04-28 13:21:22,853 root INFO Browser: chrome
2024-04-28 13:21:22,856 root ERROR SyntaxError: invalid syntax
  File "C:\Users\devad\PycharmProjects\golem\tutorial\projects\Akshy\tests\perform_search.py", line 6
    navigate(https://wikipedia.org)
                  ^
SyntaxError: invalid syntax

